src/test/resources/Parser/SyntaxErrors/NoOverride.front
class A {
    void typo() {}
}

class B : A {
    void tpyo() override {}
}